# agente-stampa-3d

./: .coverage  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .spectral.yaml  .spectral.yaml.new  DIARIO_PERSONALE.md  Makefile  README.md  ROADMAP.md  Repo Dev AI.txt  coverage.xml  main.py  mif_jsonschema_dialect.json  openapi_3_1_demo.json  package-lock.json  package.json  pyproject.toml
.config/: .spectral.yaml
.devcontainer/: Dockerfile  run_in_container.sh
.github/issues/: G5-1-dialect-json-schema.md  G5-2-CI-Schema-Validation.md  G5-2-validazione-dialect-ci.md  G5-3-Redocly-Docs.md  coverage-gap-increase.md
.github/pull_requests/: feature-ci-integration.md
.github/workflows/: ci.yml
.venv_new/Scripts/: activate  activate.bat
.venv_project/Scripts/: activate  activate.bat
config/: __init__.py  settings.py  upload_settings.py
docs/: 0_INDEX.md  FUNZIONAMENTO.md  MODIFICHE.md  README.md  ROADMAP.md  Repo Dev AI.txt  SETUP_GOOGLE_API.md  logbook.md
docs/Documenti per Dev AI/: Analisi Tecnica delle API per GPT Personalizzato Ricerca Lavori 3D e Sincronizzazione Calendario.txt  Guida completa alla configurazione di un GPT personalizzato con GPT Actions e OpenAPI 3.0.txt  Implementazione Avanzata di GPT Actions con API Esterne tramite OpenAPI.txt  Revisione Finale del Progetto di Ricerca e Sviluppo Implementazione e Validazione Avanzata di OpenAPI 3.1.0 per GPT Actions.txt  Revisione e Piano di Implementazione Strategia 'Spectral & Schema Gap-Fix' per la Governance API.txt
docs/Regole Dev AI/: Flusso-di-lavoro.txt  Regola dev AI.txt  Rules-dev AI.txt  regola tech lead.txt
docs/decisions/: decisions.md  dialect_json_schema_decisions.md
docs/governance/: pre_commit.md  redocly_setup.md  spectral_rules.md
docs/issues/: COVERAGE-GAP.md
docs/logbook/: DIARIO_PERSONALE.md  logbook_unificato_dev_ai.md
docs/processes/: ci_pipeline.md  workflow_mandatory.md
docs/research/: piano_ricerca_parte1.md
docs/structure/: code_map.md  devcontainer.md  modular_plan.md  repo_layout.md
evidence/tests/: coverage.xml  pytest_results.txt
infra/: docker-compose.redis.yml
routers/: __init__.py  jobs.py  uploader.py
scripts/: generate_fake_secret.py  test_builder_upload.py
services/: __init__.py  jobs_service.py
services/google_calendar/: auth_flow.py
services/redis/: redis_client.py
services/uploader/: storage.py  uploader_service.py  validator.py
services/webhook/: handler.py  router.py
tests/: conftest.py  simple_test.py  test_auth_flow.py
tests/fixtures/: test_model.stl
tests/integration/: test_upload_flow.py
tests/spec/: test_schema_dialect.py
tests/uploader/: __init__.py  test_service.py  test_uploader.py
tests/utils/: mock_redis.py  test_ratelimit.py
utils/: __init__.py  ratelimit.py
