[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agente-stampa-3d"
version = "0.1.0"
description = "API backend per il GPT Assistente Lavori Stampa 3D"
authors = [
    { name = "Dev AI", email = "dev.ai@example.com" }, # Formato PEP 621
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

# Dipendenze principali del progetto (PEP 621)
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "google-api-python-client==2.120.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "httplib2==0.22.0",
    "python-graphql-client==0.4.3",
    "redis==5.0.4",
]

# [project.optional-dependencies]
# Altre dipendenze opzionali se necessario

# Classificatori opzionali, possono essere utili
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License", # Sostituisci con la tua licenza
#     "Operating System :: OS Independent",
# ]

# Keywords opzionali
# keywords = ["fastapi", "gpt", "3d-printing", "api"]

# URL opzionali del progetto
# [project.urls]
# "Homepage" = "https://github.com/your-username/agente-stampa-3d"
# "Bug Tracker" = "https://github.com/your-username/agente-stampa-3d/issues"

[tool.poetry]
name = "agente-stampa-3d"
version = "0.1.0"
description = "API backend per il GPT Assistente Lavori Stampa 3D"
authors = ["Dev AI <dev.ai@example.com>"] # Formato classico di Poetry

# Dipendenze e specifica Python per [tool.poetry]
[tool.poetry.dependencies]
python = ">=3.11,<3.13" # Allineato con [project] e Dockerfile
fastapi = "0.110.2"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pydantic = "2.7.1"
google-api-python-client = "2.120.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "0.2.0"
httplib2 = "0.22.0"
python-graphql-client = "0.4.3"
redis = "5.0.4"

# Le dipendenze di sviluppo rimangono qui
[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-mock = "3.14.0"
pre-commit = "3.7.0"
black = "24.4.2"
isort = "5.13.2"
flake8 = "7.0.0"
detect-secrets = "1.4.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" 
